feat: prepares hotel route

--- a/src/app/pages/home.component.html
+++ b/src/app/pages/home.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div libFlexColumn>
-            <button [routerLink]="'/hotel'" mat-flat-button color="primary">Details</button>
+            <button [routerLink]="getHotelRouterLink(hotel)" mat-flat-button color="primary">Details</button>
         </div>
     </div>
 </div>
