--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,15 +38,17 @@ body {
   height: 100%;
 }
 body {
-  margin: 24px 24px;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 
   .content-wrapper {
     max-width: 1080px;
     margin-left: auto;
     margin-right: auto;
+    padding: 32px;
   }
   font-family: "Roboto", "Helvetica Neue", sans-serif;
-  padding: 24px;
   background: rgb(245, 245, 248);
 }
 
