feat: sets up Web Spotlight for hotel preview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div class="content-wrapper" [attr.data-kontent-project-id]="projectId"  [attr.data-kontent-language-codename]="languageCodename">
 
     <div libFlexRow>
         <a libFlexColumn [routerLink]="'/'">
